Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1757

'Follow symbol under cursor' does not work for JavaScript functions

    XMLWordPrintable

Details

    • 4ecf0349c5c56de36f7b9e72dbdba790caaa530e

    Description

      1) Open the snake example project and open snake.qml
      2) Try to press F2 on function calls like Logic.startNewGame();
      -> Does not work

      Also, functions both written and called in the same qml file can't be followed.

      ...
      function foo() {
      console.log("hey")
      }
      
      MouseArea {
        onClicked: {
        // F2 does not work here
        foo()
       }
      }
      ...
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ckamm Christian Kamm
            holmsted Lasse Holmstedt
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes