QmlJS: Make 'follow symbol' work on JS functions.

Task-number: QTCREATORBUG-1757